docs: Creación de Evidencias.md con evidencias en captura de la url del sitio activa y capturas del sitio web funcionando en tema oscuro y claro y sección de aprendizajes

--- a/readme
+++ b/readme
@@ -39,7 +39,8 @@ El diseño incluye imágenes, favicon y un boton para activar modo oscuro.
 ├─index.html
 ├─style.css
 ├─boton_toggle.js
-├─favicon/
+├─assets/favicon/
+├─img
 │├─icono.png
 │├─malware.png
 │├─pishing.png
